data/derived/sp14/progs/unify/prog4750.ml.out
Characters 61-62:
  wwhile(y, b);;
         ^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
